# auditless-py-solc-x

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
auditless_solcx/: __init__.py  main.py
tests/: test_auditless_solcx.py
tests/contracts/: contract.sol
util/: __init__.py
